<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_intro">IntroActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_progress">ProgeressActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="app_name">PubSubTutorial</string>
    <string name="coffee_please">Coffee Please</string>
    <string name="user">ID</string>
    <string name="user_id">User_ID</string>
    <string name="user_pwd">pwd</string>
    <string name="user_pwd_enter">***********</string>
    <string name="button_login">LOGIN</string>
    <string name="매장">매장 관리</string>
    <string name="store_analysis">Store Analysis</string>
    <string name="sales_analysis">Sales Analysis</string>
    <string name="stock_info">Stock Info</string>
    <string name="table_info">Table Information</string>
    <string name="waiting_list">Order List</string>
    <string name="Table_Info">Table</string>
    <string name="Table_One">1</string>
    <string name="Table_2">2</string>
    <string name="Table_3">3</string>
    <string name="Table_4">4</string>
    <string name="Table_5">5</string>
    <string name="Table_6">6</string>
    <string name="Table_7">7</string>
    <string name="Table_8">8</string>
    <string name="main_page">ROBOTBUCKS</string>
    <string name="Menu">Options</string>
    <string name="Greeting">WELCOME</string>
    <string name="userIcon">userIcon</string>
    <string name="tNo">Table_Number</string>
    <string name="menu">Menu</string>
    <string name="size">Size</string>
    <string name="count">Count</string>
    <string name="return_button">RETURN</string>
    <string name="Table_9">9</string>
    <string name="Table_10">10</string>
    <string name="Table_11">11</string>
    <string name="Table_12">12</string>
    <string name="Table_13">13</string>
    <string name="Table_14">14</string>
    <string name="Table_15">15</string>
    <string name="Table_16">16</string>
    <string name="robotbucks">ROBOTBUCKS</string>
    <string name="cancel">CANCEL</string>
    <string name="button">SEND</string>
    <string name="button1">SEND</string>
    <string name="tablenum">TableNo</string>
    <string name="Menus">Menu</string>
    <string name="Status">Status</string>
    <string name="robutbucks">ROBUTBUCKS</string>
    <string name="welcome">WELCOME</string>
    <string name="action_settings">Settings</string>
    <string name="no">No.</string>
    <string name="order_list">Order list</string>
    <string name="table">Table</string>
    <string name="time">Time</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="second_menu">second_menu</string>
    <string name="holy_operating_systems_batdroid">Holy Operating Systems, Batdroid!</string>


</resources>