<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="match_parent">
    <!--    tools:context="com.example.yeji.formusu.TableActivity" -->


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/order_txt"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tablenum_txt"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/table"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/orderlist_txt"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/order_list"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/ordertime_txt"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="15sp" />
    </TableRow>


</TableLayout>
