<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fitsSystemWindows="true">

    <!-- xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"-->

    <ImageButton
        android:id="@+id/user"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="24dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:contentDescription="@string/userIcon"
        android:scaleType="fitCenter"
        android:src="@drawable/icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/user"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/Store"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="80dp"
            android:background="@android:color/black"
            android:contentDescription="@android:string/yes"
            android:elevation="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/cafe"
            tools:ignore="RtlHardcoded,UnusedAttribute"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/imageView_Stock"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="80dp"
            android:background="@android:color/background_dark"
            android:contentDescription="@android:string/ok"
            android:scaleType="fitCenter"
            android:src="@drawable/my_bean"
            tools:ignore="RtlHardcoded" />

        <ImageButton
            android:id="@+id/imageView_Sales"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="80dp"
            android:background="@android:color/black"
            android:contentDescription="@android:string/ok"
            android:elevation="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/money"
            tools:ignore="RtlHardcoded,UnusedAttribute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView_Store"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:text="@string/store_analysis"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded"
            tools:targetApi="ice_cream_sandwich" />

        <TextView
            android:id="@+id/textView_Sales"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="2dp"
            android:text="@string/stock_info"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textView_Stock"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="185dp"
            android:layout_marginTop="2dp"
            android:text="@string/sales_analysis"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>




</RelativeLayout>