<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="800dp"
        android:layout_height="500dp"
        android:layout_marginStart="100dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="2dp"
        tools:context=".TableActivity">

        <ImageButton
            android:id="@+id/table1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/table_oval"
            android:visibility="visible"
            tools:ignore="ContentDescription"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/table2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/table_oval"
            android:visibility="visible"
            tools:ignore="ContentDescription"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/table3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/table_oval"
            android:visibility="visible"
            tools:ignore="ContentDescription"
            tools:targetApi="lollipop"
            android:layout_below="@+id/table2"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <!-- Side navigation drawer UI -->
    <TableLayout
        android:id="@+id/order_info_table"
        android:layout_width="310dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/order_txt"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tablenum_txt"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/table"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/orderlist_txt"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/order_list"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ordertime_txt"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/t11"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t12"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t13"
                android:layout_width="170dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t14"
                android:layout_width="38dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp">

            <TextView
                android:id="@+id/t21"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t22"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t23"
                android:layout_width="170dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t24"
                android:layout_width="38dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="90dp">

            <TextView
                android:id="@+id/t31"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t32"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t33"
                android:layout_width="170dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t34"
                android:layout_width="38dp"
                android:layout_height="wrap_content" />
        </TableRow>


    </TableLayout>

</android.support.v4.widget.DrawerLayout >
